# tf_android_studio

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  imageutils_jni.cc
app/src/main/java/com/tensorflow/demo/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  Classifier.java  RecognitionScoreView.java  TensorFlowImageClassifier.java  TensorFlowImageListener.java
app/src/main/java/com/tensorflow/demo/env/: ImageUtils.java  Logger.java
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml
app/src/main/res/layout-land/: camera_connection_fragment.xml
app/src/main/res/values/: base-strings.xml
demowrapper/: CMakeLists.txt  build.gradle  proguard-rules.pro
demowrapper/src/main/: AndroidManifest.xml
demowrapper/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
